LIME-244: * Removed partial sidebar implementation to avoid layout issues , added toggle on 1200px or less (xl)

--- a/frontend/src/bundles/common/components/base-layout/styles.module.css
+++ b/frontend/src/bundles/common/components/base-layout/styles.module.css
@@ -3,7 +3,7 @@
         "header header"
         "aside main";
 
-    @apply grid grid-cols-[0,auto] grid-rows-[88px,auto] overflow-hidden transition-all duration-[0.5s] ease-[ease-in-out] sm:grid-cols-[0,auto] md:grid-cols-[44px,auto]  lg:grid-cols-[288px,auto];
+    @apply grid grid-cols-[256px,auto] grid-rows-[88px,auto] overflow-hidden transition-all duration-[0.5s] ease-[ease-in-out] sm:grid-cols-[0,auto] lg:grid-cols-[288px,auto];
 }
 
 .content-container {
@@ -19,7 +19,7 @@
 .base-layout.sidebar-closed {
     grid-template:
         "header header" 88px
-        "aside main" /44px;
+        "aside main" /0;
 }
 
 ::-webkit-scrollbar {
@@ -37,12 +37,4 @@
 
 ::-webkit-scrollbar-thumb:hover {
     background: var(--button-secondary);
-}
-
-@media (width <= 490px) {
-    .base-layout.sidebar-closed {
-        grid-template:
-            "header header" 88px
-            "aside main" /0;
-    }
 }
